add material structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 	"editor.detectIndentation": false,
 	"editor.renderWhitespace": "all",
 	"files.associations": {
-		"algorithm": "c"
+		"algorithm": "c",
+		"iterator": "c"
 	}
 }
