fix init multi isec

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
 	"editor.renderWhitespace": "all",
 	"files.associations": {
 		"algorithm": "c",
-		"iterator": "c"
+		"iterator": "c",
+		"ostream": "c",
+		"*.tcc": "c"
 	}
 }
