--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,22 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "(lldb) Launch",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "enter program name, for example ${workspaceFolder}/a.out",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "lldb"
+		},
+		{
 			"name": "(lldb) Attach",
 			"type": "cppdbg",
 			"request": "attach",
-			"program": "${workspaceFolder}/RT",
+			"program": "enter program name, for example ${workspaceFolder}/a.out",
 			"processId": "${command:pickProcess}",
 			"MIMode": "lldb"
 		}
